--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
     "react": "^18",
